# obs-studio

./: .cirrus.yml  .clang-format  .cmake-format.json  .editorconfig  .gersemirc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mailmap  .swift-format  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  COC.rst  CODESTYLE.md  COMMITMENT  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  CURRENT_mess.md  DEVELOPMENTPLAN.md  Doxyfile  INSTALL  INSTALL.md  MOSAIC_PLAN.md  Makefile.am  MissMiu_CODE_OF_CONDUCT.md  Oc  PLUS_PLAN.md  README  README.md  README.rst  ROADMAP.md  SECURITY.md  VirtualCam_README.md  appveyor.yml  autogen.sh  (+17 more)
UI/: .gitignore  CMakeLists.txt  Mapper.cpp  OBSAudioMeter.cpp  OBSAudioMeter.hpp  RtMidi.h  absolute-slider.cpp  absolute-slider.hpp  adv-audio-control.cpp  adv-audio-control.hpp  api-interface.cpp  area_window.cpp  area_window.hpp  audio-encoders.cpp  audio-encoders.hpp  auth-base.cpp  auth-base.hpp  auth-caffeine.cpp  auth-caffeine.hpp  auth-listener.cpp  auth-listener.hpp  auth-mixer.cpp  auth-mixer.hpp  auth-oauth-onlyfans.cpp  auth-oauth-onlyfans.hpp  auth-oauth.cpp  auth-oauth.hpp  auth-onlyfans.cpp  auth-onlyfans.hpp  auth-peertube.cpp  auth-peertube.hpp  auth-restream.cpp  auth-restream.hpp  auth-trovo.cpp  auth-trovo.hpp  auth-twitch.cpp  auth-twitch.hpp  auth-youtube.cpp  auth-youtube.hpp  auto-config-enums.hpp  (+282 more)
core/: CMakeLists.txt
frontend/: CMakeLists.txt  OBSApp.cpp  OBSApp.hpp  OBSApp_Themes.cpp  OBSStudioAPI.cpp  OBSStudioAPI.hpp  obs-main.cpp
libobs/: CMakeLists.txt  LibObsConfig.cmake.in  dynamic-delay-media.c  dynamic-delay-media.h  dynamic-delay.c  dynamic-delay.h  libobs.pc.in  makefile  makefile.am  obs-audio-controls.c  obs-audio-controls.h  obs-audio-optimized.c  obs-audio-pool.c  obs-audio-pool.h  obs-audio-threaded.c  obs-audio-threaded.h  obs-audio-track.c  obs-audio.c  obs-av1.c  obs-av1.h  obs-avc.c  obs-avc.h  obs-canvas.c  obs-cocoa.c  obs-cocoa.m  obs-config.h  obs-core-modules-loader-mac.m  obs-core-modules-loader-nix.c  obs-core-modules-loader-win.c  (+73 more)
libobs-d3d11/: CMakeLists.txt  GS_D3D11Exports.h  GS_D3D11SamplerState.cpp  GS_D3D11Shader.cpp  GS_D3D11ShaderProcessor.cpp  GS_D3D11ShaderProcessor.hpp  GS_D3D11SubSystem.cpp  GS_D3D11SubSystem.hpp  GS_D3D11Texture2D.cpp  d3d11-colorspace.cpp  d3d11-colorspace.hlsl  d3d11-config.h.in  d3d11-duplicator.cpp  d3d11-exports.h  d3d11-fence.cpp  d3d11-fence.hpp  d3d11-indexbuffer.cpp  d3d11-new.cpp  d3d11-rebuild.cpp  d3d11-samplerstate.cpp  d3d11-shader.cpp  d3d11-shaderprocessor.cpp  d3d11-shaderprocessor.hpp  d3d11-stagesurf.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp  d3d11-texture3d.cpp  d3d11-unimplemented.cpp  d3d11-vertexbuffer.cpp  d3d11-zstencilbuffer.cpp  d3dx-common.cpp  d3dx-common.hpp  intel-nv12-support.hpp  makefile
libobs-d3d12/: CMakeLists.txt  Common.h  Hash.h  d3d12-buffer.cpp  d3d12-command-context.cpp  d3d12-command-context.hpp  d3d12-commandqueue.cpp  d3d12-commandqueue.hpp  d3d12-common.cpp  d3d12-common.hpp  d3d12-context.cpp  d3d12-context.hpp  d3d12-descriptor-allocator.cpp  d3d12-descriptor-heap.cpp  d3d12-descriptorallocator.cpp  d3d12-descriptorallocator.hpp  d3d12-deviceinstance.cpp  d3d12-deviceinstance.hpp  d3d12-duplicator.cpp  d3d12-dynamic-descriptorheap.cpp  d3d12-dynamic-descriptorheap.hpp  d3d12-gpubuffer.cpp  d3d12-gpubuffer.hpp  d3d12-graphics-rootsignature.cpp  d3d12-indexbuffer.cpp  d3d12-linearallocator.cpp  d3d12-linearallocator.hpp  d3d12-pipeline.cpp  d3d12-pipeline.hpp  d3d12-rebuild.cpp  d3d12-rootsignature.cpp  d3d12-rootsignature.hpp  d3d12-samplerstate.cpp  d3d12-shader.cpp  d3d12-shaderprocessor.cpp  d3d12-shaderprocessor.hpp  d3d12-stagesurf.cpp  d3d12-subsystem.cpp  d3d12-subsystem.hpp  d3d12-texture2d.cpp  (+5 more)
libobs-metal/: CMakeLists.txt  CVPixelFormat+Extensions.swift  MTLCullMode+Extensions.swift  MTLOrigin+Extensions.swift  MTLPixelFormat+Extensions.swift  MTLRegion+Extensions.swift  MTLSize+Extensions.swift  MTLTexture+Extensions.swift  MTLTextureDescriptor+Extensions.swift  MTLTextureType+Extensions.swift  MTLViewport+Extensions.swift  MetalBuffer.swift  MetalDevice.swift  MetalError.swift  MetalRenderState.swift  MetalShader+Extensions.swift  MetalShader.swift  MetalStageBuffer.swift  MetalTexture.swift  OBSShader.swift  OBSSwapChain.swift  README.md  Sequence+Hashable.swift  libobs+Extensions.swift  libobs+SignalHandlers.swift  libobs-metal-Bridging-Header.h  metal-device.mm  metal-indexbuffer.mm  metal-indexbuffer.swift  metal-rebuild.mm  metal-samplerstate.mm  metal-samplerstate.swift  metal-shader.mm  metal-shader.swift  metal-shaderbuilder.cpp  metal-shaderprocessor.hpp  metal-shaderprocessor.mm  metal-stagesurf.mm  metal-stagesurf.swift  metal-subsystem.hpp  (+12 more)
libobs-opengl/: CMakeLists.txt  IOSurfaceHelper.h  IOSurfaceHelper.m  gl-cocoa.m  gl-drm.c  gl-drm.h  gl-egl-common.c  gl-egl-common.h  gl-exports.h  gl-helpers.c  gl-helpers.h  gl-indexbuffer.c  gl-nix-egl-wayland.c  gl-nix-egl-wayland.h  gl-nix-egl-x11.c  gl-nix-egl-x11.h  gl-nix-glx.c  gl-nix-glx.h  gl-nix.c  gl-nix.h  gl-shader.c  gl-shaderparser.c  gl-shaderparser.h  gl-stagesurf.c  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c  gl-texture3d.c  gl-texturecube.c  gl-vertexbuffer.c  gl-wayland-egl.c  gl-wayland-egl.h  gl-wayland.c  gl-wayland.h  gl-windows.c  gl-x11-egl.c  gl-x11-glx.c  gl-x11-glx.h  gl-x11.c  gl-x11.h  (+3 more)
libobs-vulkan/: CMakeLists.txt  COMPLETION_SUMMARY.md  INTEGRATION_CHECKLIST.md  README.md  SHADER_COMPILATION.md  VULKAN_LOADER.md  vulkan-api.h  vulkan-helpers.c  vulkan-helpers.h  vulkan-indexbuffer.c  vulkan-loader.c  vulkan-loader.h  vulkan-shader-compiler-glslang.cpp  vulkan-shader-compiler.c  vulkan-shader-compiler.h  vulkan-shader-manager.c  vulkan-shader-manager.h  vulkan-shader.c  vulkan-stagesurf.c  vulkan-subsystem.c  vulkan-subsystem.h  vulkan-texture2d.c  vulkan-texture3d.c  vulkan-texturecube.c  vulkan-vertexbuffer.c  vulkan-windows.c  vulkan-zstencil.c
libobs-winrt/: CMakeLists.txt  winrt-capture.cpp  winrt-capture.h  winrt-dispatch.cpp  winrt-dispatch.h
(+9391 files in other folders)
